kuriikwsfiltereng: Fix quitting match logic if accidentally bang syntax is used

If we have found a bang-match it might be unintentionally triggered, because the ! character is contained in the query.
To avoid not returning any results we check if we can find a provider for the key,
if not we clear it and try the traditional query syntax

BUG: 437660
FIXED-IN: 5.87